--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -11,10 +11,28 @@ User(jeff):
     password:       secret
     fullname:       Jeff
 
+
+Tag(play):
+    name:           Play
+
+Tag(architecture):
+    name:           Architecture
+
+Tag(test):
+    name:           Test
+
+Tag(mvc):
+    name:           MVC
+
+
 Post(firstBobPost):
     title:          About the model layer
     postedAt:       2009-06-14
     author:         bob
+    tags:
+                        - play
+                        - architecture
+                        - mvc
     content:        >
                     The model has a central position in a Play! application. It is the domain-specific
                     representation of the information on which the application operates.
@@ -30,6 +48,9 @@ Post(secondBobPost):
     title:          Just a test of YABE
     postedAt:       2009-03-25
     author:         bob
+    tags:
+                            - play
+                            - architecture
     content:        >
                     Well, it's just a test.
 
