--- a/conf/application.conf
+++ b/conf/application.conf
@@ -223,3 +223,7 @@ blog.baseline=We will write about nothing
 
 # Import the secure module
 module.secure=${play.path}/modules/secure
+
+%server01.application.mode=PROD
+%server01.db=mysql:root:root@yabe
+%server01.jpa.ddl=update
